--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,2 +1,5 @@
 @import'./base/reset';
+@import'./utils/hidden';
+@import'./components/cssLoader';
+@import'./components/gallerySimpleLightbox';
 @import './loyaut/index';
